# brain-damage

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs
src/compositor/: handlers.rs  mod.rs  state.rs
src/terminal/: input.rs  kitty.rs  mod.rs
